UX-106 Fix Tag remove vertical alignment

--- a/packages/matchbox/src/components/Tag/Tag.module.scss
+++ b/packages/matchbox/src/components/Tag/Tag.module.scss
@@ -139,4 +139,8 @@
     color: color(gray, 1);
     background: color(gray, 7);
   }
+
+  & > * {
+    margin-top: -0.2em;
+  }
 }
